# surge-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  RELEASE.md  flake.nix  surge-tui.toml.example
.claude/rules/: README.md  code-style.md  commit-convention.md  i18n.md  project-structure.md
.github/workflows/: release.yml
docs/: FEATURES.md  I18N_DESIGN.md  RELEASE.md  requirements.md  research.md
docs/design/: http-headers-capture-via-scripting.md  surge-tui-enhancements.md  ui-preview.md
homebrew/: surge-tui.rb
nix/: default.nix
scripts/: release.sh
src/: lib.rs  main.rs
src/application/: mod.rs  surge_client.rs
src/config/: config.rs  mod.rs
src/domain/: entities.rs  errors.rs  mod.rs  models.rs
src/i18n/: en_us.rs  mod.rs  zh_cn.rs
src/infrastructure/: cli_client.rs  http_client.rs  mod.rs  system_client.rs
src/ui/: app.rs  mod.rs
src/ui/components/: alerts.rs  dns.rs  mod.rs  notifications.rs  overview.rs  policies.rs  requests.rs
