[package]
name = "surge-tui"
version = "0.1.0"
edition = "2021"

[features]
default = ["lang-en-us"]
lang-zh-cn = []
lang-en-us = []

[dependencies]
# 异步运行时
tokio = { version = "1.45", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置解析
toml = "0.8"

# URL 编码
urlencoding = "2.1"

# Unicode 字符宽度计算
unicode-width = "0.2"

# 时间日期处理
chrono = "0.4"
