[package]
name = "surge-tui"
version = "0.1.1"
edition = "2021"

[features]
# Default language: en-us (no flag needed)
# Chinese build:    cargo build --features zh-cn
zh-cn = []

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config parsing
toml = "0.8"

# URL encoding
urlencoding = "2.1"

# Unicode character width calculation
unicode-width = "0.2"

# Date/time handling
chrono = "0.4"
